--- a/package.json
+++ b/package.json
@@ -28,16 +28,17 @@
   },
   "dependencies": {
     "antd": "^4.4.3",
+    "axios": "^0.19.2",
+    "clean-webpack-plugin": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "sass": "^1.26.10",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.2.0",
-    "axios": "^0.19.2"
+    "sass": "^1.26.10",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   }
 }
